# formallangs

./: default.profraw
grammars/: CMakeCache.txt  CMakeLists.txt  Makefile  coverage.txt  default.profdata  default.profraw  grammar_arith  grammar_brackets  grammar_slr  readme.md
grammars/includes/: grammars.h
grammars/includes/parsing/: earley.h  lr.h
grammars/src/: debug.cpp  grammars.cpp  main_earley.cpp  main_lr.cpp
grammars/src/earley/: earley.cpp  main.cpp
grammars/src/parsing/: earley.cpp  lr.cpp
grammars/tests/: earley.cpp  grammar.cpp  lr.cpp  tests.h
img/: automata.py  automata.txt
practask/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  compile_commands.json  count_coverage.sh  coverage.txt  default.profdata  default.profraw  readme.md
practask/includes/: Automaton.h  Common.h  Optimize.h  Regexp.h  Task.h  grammars.h
practask/includes/earley/: earley.h
practask/src/: Automaton.cpp  Main.cpp  Optimize.cpp  Regexp.cpp  Task.cpp
practask/src/earley/: grammars.cpp  main.cpp
practask/tests/: main.cpp  tests.cpp  tests.h
